# polymerode

./: CMakeLists.txt
beadrodpmer/: BeadRodPmerConfig.h.in  CMakeLists.txt  input.cpp  input.hpp  main.cpp  run.cpp  run.hpp
examples/: real.in
libbeadrodpmer/: CMakeLists.txt  atom.hpp  beadrodpmer.pc.in  bond.hpp  double_tether.cpp  double_tether.hpp  globalparams.cpp  globalparams.hpp  initialise.cpp  initialise.hpp  input.cpp  input.hpp  iovtk.cpp  iovtk.hpp  iovtk.tpp  matrix.hpp  no_tether.cpp  no_tether.hpp  polymer.cpp  polymer.hpp  single_tether.cpp  single_tether.hpp
main/: main.cpp
scripts/: convertVTKtoNParrays.py  fix_roundoff.py  keylikeshape.py  semi_circle.py  set_params.py
src/: atom.hpp  base.cpp  base.hpp  bond.hpp  double_tether.cpp  double_tether.hpp  globalparams.cpp  globalparams.hpp  iovtk.cpp  iovtk.hpp  matrix.hpp  no_tether.cpp  no_tether.hpp  polymer.cpp  polymer.hpp  run.cpp  run.hpp  runtests.cpp  runtests.hpp  single_tether.cpp  single_tether.hpp  testclass.cpp  testclass.hpp  utilfuncs.cpp  utilfuncs.hpp
tests/: README.txt
tests/change_in_constraints/: CMakeLists.txt  main.cpp
tests/double_tether_circleends/: stable.trj.pvd  stable.trj_1000.vtp
tests/double_tether_fixedends/: real.in  stable.trj.pvd  stable.trj_1000.vtp
tests/matrix_definitions/: CMakeLists.txt  main.cpp
tests/no_tether/: real.in  stable.trj_0.vtp  stable.trj_1000.vtp
tests/noise_projections/: CMakeLists.txt  main.cpp
tests/single_tether_circleends/: real.in  stable.trj_1000.vtp
tests/single_tether_fixedends/: stable.trj_1000.vtp
